version 10.0.1
date: dd/mm/yyyy
  * Updated German localization

version 10.0
date: 02/08/2021
  * added two transformers, one from EDOAL to flat formats (OWL and SKOS alignment properties) and one from flat formats to EDOAL
  * added documentation generators
  * implemented a content storage service
  * allowed references to files in the content storage in reports (which are returned as zip archives)
  * allowed invocation of ordinary services in custom reports
  * allowed to index specific sections in the Mustache templates used for the rendering of invokable reporters
  * renamed the service compileAndDownloadReport to compileAndExportReport, while allowing to indicate an optional deployer
  * introduced the Time Machine, allowing for the recreation of the state of any resource (up to two hops of context in the graph) at any time in history
  * added support for undo
  * added the possibility in the advancedSearch to not pass the predicate in predicate-object constraints, where the object can be text-searched
  * allowed to disable validation on commit in projects with SHACL validation enabled
  * introduced batch SHACL validation of a repository producing a validation report
  * replaced the connector to the EU Open Data Portal (being dismissed) with a connector to the new data.europa.eu portal
  * added configuration parameters for SHACL
  * added inconsistency report
  * added file from http://prefix.cc/ containing most used prefix-namespace to resolve most used namespaces 
  * added the Spreadsheet lifter to load data from a spreadsheet
  * update core settings to the new settings management framework (including the use of YAML to persist them)
  * upgrade the PUSettings of the RenderingEngine extension point to the new framework (including the use of YAML to persist them)
  * implemented resource view custom sections and enabled the customization of the resource view associated with a role
  * implemented the support for Java enums in STProperties