@@ -277,14 +277,10 @@ it.uniroma2.art.semanticturkey.extension.extpts.rendering.RenderingEnginePUSetti
 it.uniroma2.art.semanticturkey.project.SHACLSettings.shortName = SHACL Settings
 it.uniroma2.art.semanticturkey.project.SHACLSettings.parallelValidation.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.parallelValidation.displayName = Parallel validation
-it.uniroma2.art.semanticturkey.project.SHACLSettings.undefinedTargetValidatesAllSubjects.description =
-it.uniroma2.art.semanticturkey.project.SHACLSettings.undefinedTargetValidatesAllSubjects.displayName = Undefined target validates all subjects
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.displayName = Log validation plans
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationViolations.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationViolations.displayName = Log validation violations
-it.uniroma2.art.semanticturkey.project.SHACLSettings.ignoreNoShapesLoadedException.description =
-it.uniroma2.art.semanticturkey.project.SHACLSettings.ignoreNoShapesLoadedException.displayName = Ignore the NoShapesLoadedException
 it.uniroma2.art.semanticturkey.project.SHACLSettings.cacheSelectNodes.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.cacheSelectNodes.displayName = Cache select nodes
 it.uniroma2.art.semanticturkey.project.SHACLSettings.validationEnabled.description =
