@@ -759,9 +759,7 @@ it.uniroma2.art.semanticturkey.project.SHACLSettings.eclipseRdf4jShaclExtensions
 it.uniroma2.art.semanticturkey.project.SHACLSettings.eclipseRdf4jShaclExtensions.displayName = Eclipse RDF4J-Erweiterungen
 it.uniroma2.art.semanticturkey.project.SHACLSettings.globalLogValidationExecution.description = 
 it.uniroma2.art.semanticturkey.project.SHACLSettings.globalLogValidationExecution.displayName = Ausführung der globalen Log-Validierung
-it.uniroma2.art.semanticturkey.project.SHACLSettings.ignoreNoShapesLoadedException.description = 
-it.uniroma2.art.semanticturkey.project.SHACLSettings.ignoreNoShapesLoadedException.displayName = NoShapesLoadedException ignorieren
-it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.description = 
+it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.displayName = Log-Validierungspläne
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationViolations.description = 
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationViolations.displayName = Validierungsverletzungen protokollieren
@@ -774,9 +772,7 @@ it.uniroma2.art.semanticturkey.project.SHACLSettings.rdfsSubclassReasoning.displ
 it.uniroma2.art.semanticturkey.project.SHACLSettings.serializableValidation.description = 
 it.uniroma2.art.semanticturkey.project.SHACLSettings.serializableValidation.displayName = Serialisierbare Validierung
 it.uniroma2.art.semanticturkey.project.SHACLSettings.shortName = SHACL-Einstellungen
-it.uniroma2.art.semanticturkey.project.SHACLSettings.undefinedTargetValidatesAllSubjects.description = 
-it.uniroma2.art.semanticturkey.project.SHACLSettings.undefinedTargetValidatesAllSubjects.displayName = Unbestimmtes Ziel validiert alle Themen
-it.uniroma2.art.semanticturkey.project.SHACLSettings.validationEnabled.description = 
+it.uniroma2.art.semanticturkey.project.SHACLSettings.validationEnabled.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.validationEnabled.displayName = Validierung aktiviert
 it.uniroma2.art.semanticturkey.project.SHACLSettings.validationResultsLimitPerConstraint.description = 
 it.uniroma2.art.semanticturkey.project.SHACLSettings.validationResultsLimitPerConstraint.displayName = Grenzwert der Validierungsergebnisse pro Bedingung
