@@ -265,8 +265,6 @@ it.uniroma2.art.semanticturkey.extension.extpts.rendering.RenderingEnginePUSetti
 it.uniroma2.art.semanticturkey.project.SHACLSettings.shortName = Impostazioni di SHACL
 it.uniroma2.art.semanticturkey.project.SHACLSettings.parallelValidation.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.parallelValidation.displayName = Validazione parallela
-it.uniroma2.art.semanticturkey.project.SHACLSettings.undefinedTargetValidatesAllSubjects.description =
-it.uniroma2.art.semanticturkey.project.SHACLSettings.undefinedTargetValidatesAllSubjects.displayName = Target non definito valida tutti i soggetti
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.description =
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationPlans.displayName = Logga i piani di validazione
 it.uniroma2.art.semanticturkey.project.SHACLSettings.logValidationViolations.description =
